--- a/prontocloud/css/styles.css
+++ b/prontocloud/css/styles.css
@@ -20,40 +20,42 @@ body {
     padding: 20px;
     max-width: 100%;
     margin: 0 auto;
-    max-width: 1198px;
 }
 
 header {
     background: #fff;
     display: block;
     float: left;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
-    border-bottom: 1px solid #254159;
+    border-bottom: 1px solid #000000;
 }
 
 h1 {
-    font-size: 2.4rem;
-    color: #254159;
+    font-size: 3.4rem;
+    color: #000000;
     margin-bottom: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: lighter;
+    text-align: right;
 }
 
 h2 {
     font-size: 2rem;
-    color: #254159;
+    color: #000000;
     margin-bottom: 20px;
 }
 
 h3 {
     font-size: 1.8rem;
-    color: #254159;
+    color: #000000;
     margin-bottom: 20px;
     padding-top: 10px;
 }
 
 h4 {
     font-size: 1.6rem;
-    color: #385874;
+    color: #000000;
     margin-bottom: 10px;
     padding-top: 10px;
 }
@@ -70,19 +72,20 @@ img {
 }
 
 #tenho-interesse {
-    background-color: #b8c8d6;
+    background-color: #d5d6d6;
     width: 100%;
+    display: flex;
 }
 
 #tenho-interesse form,
 .cognito.c-med .c-forms-form,
 .cognito.c-med .c-forms-form div {
-    background-color: #b8c8d6 !important;
+    background-color: #c2c2c2 !important;
 }
 
 #tenho-interesse .cognito .c-forms-form .c-forms-form-title h2,
 #tenho-interesse .cognito label[for], .cognito input[type=radio], .cognito input[type=checkbox] {
-    color: #385874;
+    color: #60666b;
 }
 
 ol {
@@ -98,7 +101,7 @@ section {
     background-color: #fff;
     display: block;
     float: left;
-    font-size: 1.5rem; /* equivalente a 15px */ 
+    font-size: 1.6rem; /* equivalente a 15px */ 
     padding: 20px;
     width: 100%;
 }
@@ -106,13 +109,14 @@ section {
 section nav {
     display: block;
     float: left;
-    width: 30%;
+    width: 20%;
 }
 
 nav li {
     background-color: #efefef;
-    margin: 1px 20px 1px 0;
+    margin: 1px 5px 40px 0;
     padding: 10px;
+    border-radius: 10px;
 }
 
 nav li:hover {
@@ -121,21 +125,22 @@ nav li:hover {
 
 nav a {
     text-decoration: none;
-    color: #254159;
+    color: #535658;
 }
 
 nav a:hover {
-    color: #385874;
+    color: #696d70;
 }
 
 section article {
     display: block;
     float: left;
     width: 70%;
+    text-align: justify;
 }
 
 footer {
-    background-color: #254159;  
+    background-color: #000000;  
     display: block;
     float: left;
     padding: 20px;
